task-3-k8-deployment/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-python-app
  template:
    metadata:
      labels:
        app: my-python-app
      annotations:
        prometheus.io/scrape: 'true' # Enable Prometheus scraping
        prometheus.io/port: '5000'   # Port the app listens on
        prometheus.io/path: '/'      # Path to the metrics endpoint (default is /metrics, but our app is simple)
    spec:
      containers:
      - name: my-python-app
        image: your-dockerhub-heysaif/my-python-app:v1
        ports:
        - containerPort: 5000
        resources:  # Important for HPA to work!
          requests:
            cpu: "100m"  # Request 100 millicores
          limits:
            cpu: "200m"  # Limit to 200 millicores
