task-3-k8-deployment/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-python-app-service
spec:
  selector:
    app: my-python-app
  ports:
    - protocol: TCP
      port: 80  # Service port
      targetPort: 5000  # Container port
  type: ClusterIP # Use ClusterIP for internal access, Ingress will handle external
