task-3-k8-deployment/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-python-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # Important for Nginx Ingress
spec:
  ingressClassName: nginx 
  rules:
  - host: myapp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-python-app-service
            port:
              number: 80
